# dasBGFX

./: CMakeLists.txt  README.md
bgfx/bgfx/src/: bgfx_headers.h  module_bgfx.ann.cpp_inc  module_bgfx.enum.cpp_inc
dasbgfx/: bgfx_boost.das  bgfx_boost_internal.das  bgfx_gen.das  bgfx_ttf.das  glsl_bgfx.das  glsl_internal_bgfx.das
examples/: 01_hello_triangle.das  02_hello_image.das  03_hello_cube.das  04_hello_render_to_texture.das  05_hello_compute.das  06_hello_ttf.das  07_hello_gen.das  08_hello_imgui.das  compile_fs.bat  compile_vs.bat  hello_bgfx.das  readback.das
src/: dasBGFX.cpp  dasBGFX.enum.decl.inc  dasBGFX.func.cpp  dasBGFX.func_1.cpp  dasBGFX.func_10.cpp  dasBGFX.func_2.cpp  dasBGFX.func_3.cpp  dasBGFX.func_4.cpp  dasBGFX.func_5.cpp  dasBGFX.func_6.cpp  dasBGFX.func_7.cpp  dasBGFX.func_8.cpp  dasBGFX.func_9.cpp  dasBGFX.h  dasBGFX.main.cpp  dasBGFX.struct.cast.inc  dasBGFX.struct.class.inc  dasBGFXImgui.cpp  generate_bgfx.das  module_bgfx.ann.cpp_inc  module_bgfx.ann.inc  module_bgfx.const_inc  module_bgfx.enum.cpp_inc  module_bgfx.enum.inc  module_bgfx.h  module_bgfx.inc  module_bgfx_split_0.cpp  module_bgfx_split_1.cpp  module_bgfx_split_2.cpp  module_bgfx_split_3.cpp  module_bgfx_split_4.cpp  module_bgfx_split_5.cpp  module_bgfx_split_6.cpp  need_bgfx.h  need_dasBGFX.h
src/imgui/: imgui_bgfx.cpp  imgui_bgfx.h
